--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.2.5
+dj-database-url==0.5.0
 Django==3.0.4
+django-heroku==0.3.1
+psycopg2==2.8.5
 pytz==2019.3
 sqlparse==0.3.1
+whitenoise==5.1.0
