--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.5
 dj-database-url==0.5.0
 Django==3.0.4
 django-heroku==0.3.1
+django-storages==1.10.1
 gunicorn==20.0.4
 Pillow==8.0.1
 psycopg2==2.8.5
