--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 asgiref==3.2.5
+boto3==1.16.32
+botocore==1.19.32
 dj-database-url==0.5.0
 Django==3.0.4
 django-heroku==0.3.1
 django-storages==1.10.1
 gunicorn==20.0.4
+jmespath==0.10.0
 Pillow==8.0.1
 psycopg2==2.8.5
+python-dateutil==2.8.1
 pytz==2019.3
+s3transfer==0.3.3
+six==1.15.0
 sqlparse==0.3.1
+urllib3==1.26.2
 whitenoise==5.1.0
