FRONT-0001: finish ertificate_preview proposal

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "config.js",
   "dependencies": {
-    "jspdf": "^2.2.0",
+    "dom-to-image": "^2.6.0",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
   },
