FRONT-0001: add Academia Blockchain as author in client directory

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Academia Blockchain",
   "license": "ISC"
 }
