--- a/client/package.json
+++ b/client/package.json
@@ -4,21 +4,44 @@
   "description": "",
   "main": "config.js",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "dom-to-image": "^2.6.0",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1"
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^5.0.1",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "postcss": "^8.2.4",
+    "postcss-loader": "^4.2.0",
     "sass": "^1.32.1",
-    "sass-loader": "^10.1.0"
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0"
   },
   "scripts": {
-    "build": "npx webpack --config webpack.config.js",
-    "start": "npx webpack",
-    "start-dev": "npx webpack --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx webpack --config webpack.config.js",
+    "build": "npx webpack --progress"
   },
   "keywords": [],
   "author": "Academia Blockchain",
