--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ boto3==1.16.32
 botocore==1.19.32
 dj-database-url==0.5.0
 Django==3.0.4
+django-braces==1.14.0
 django-heroku==0.3.1
+django-model-utils==4.1.1
+django-star-ratings==0.9.1
 django-storages==1.10.1
 gunicorn==20.0.4
 jmespath==0.10.0
@@ -14,5 +17,6 @@ pytz==2019.3
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.3.1
+swapper==1.1.2.post1
 urllib3==1.26.2
 whitenoise==5.1.0
