--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.0.4
 django-braces==1.14.0
 django-heroku==0.3.1
 django-model-utils==4.1.1
+django-star-ratings==0.9.1
 django-storages==1.10.1
 gunicorn==20.0.4
 jmespath==0.10.0
