--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.2.5
 boto3==1.16.32
 botocore==1.19.32
+certifi==2020.12.5
+chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.0.4
 django-braces==1.14.0
@@ -9,11 +11,13 @@ django-model-utils==4.1.1
 django-star-ratings==0.9.1
 django-storages==1.10.1
 gunicorn==20.0.4
+idna==2.10
 jmespath==0.10.0
 Pillow==8.0.1
 psycopg2==2.8.5
 python-dateutil==2.8.1
 pytz==2019.3
+requests==2.25.1
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.3.1
