FRONT-0007: update npm start script

--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve",
+    "start": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
