--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ gunicorn==20.0.4
 idna==2.10
 jmespath==0.10.0
 Pillow==8.0.1
-psycopg2==2.8.5
+psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.25.1
