--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,14 @@ django-heroku==0.3.1
 django-model-utils==4.1.1
 django-star-ratings==0.9.1
 django-storages==1.10.1
+django-taggit==1.3.0
 gunicorn==20.0.4
 idna==2.10
 jmespath==0.10.0
+packaging==20.9
 Pillow==8.0.1
 psycopg2-binary==2.8.6
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.25.1
@@ -23,4 +26,5 @@ six==1.15.0
 sqlparse==0.3.1
 swapper==1.1.2.post1
 urllib3==1.26.2
+webencodings==0.5.1
 whitenoise==5.1.0
