BACK-0002: fix env variables in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,13 @@ version: "3.9"
 services:
   postgres:
     image: postgres
-    environment:
-      - POSTGRES_DB=abc
-      - POSTGRES_USER=postgresuser
-      - POSTGRES_PASSWORD=postgrespassword
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
   backend:
-    environment: 
-      - DOCKER=True
-      - DATABASE_URL=postgres://postgresuser:postgrespassword@postgres:5432/abc
-      - ACADEMIA_BLOCKCHAIN_SKEY=xxxx
-      - AWSAccessKeyId=xxxx
-      - AWSSecretKey=xxxx
-      - AWS_STORAGE_BUCKET_NAME=xxxx
-      - DISABLE_COLLECTSTATIC=0
-      - HEROKU=False
-
+    env_file:
+      - .env
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
@@ -28,5 +18,6 @@ services:
       - "8000:8000"
     depends_on:
       - postgres
+
 volumes:
   postgres_data: {}
