#10 django_settings_export

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.0.4
 django-braces==1.14.0
 django-heroku==0.3.1
 django-model-utils==4.1.1
+django-settings-export==1.2.1
 django-star-ratings==0.9.1
 django-storages==1.10.1
 django-taggit==1.3.0
@@ -16,6 +17,7 @@ idna==2.10
 jmespath==0.10.0
 packaging==20.9
 Pillow==8.0.1
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pyparsing==2.4.7
 python-dateutil==2.8.1
@@ -28,4 +30,3 @@ swapper==1.1.2.post1
 urllib3==1.26.2
 webencodings==0.5.1
 whitenoise==5.1.0
-django_settings_export==1.2.1
