--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ packaging==20.9
 Pillow==8.0.1
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+pycoingecko==2.0.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2019.3
@@ -30,4 +31,3 @@ swapper==1.1.2.post1
 urllib3==1.26.2
 webencodings==0.5.1
 whitenoise==5.1.0
-pycoingecko=2.0.0
